fixed col spacing

--- a/app.css
+++ b/app.css
@@ -1,31 +1,65 @@
-:root {
-    --midnightgreen: #174c54;
+*{
+    box-sizing: border-box;
 }
-
 body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
 }
 
-*{
-    box-sizing: border-box;
-}
-
 .container {
     padding: 40px;
     height: 100vh;
-    display: flex;
+    display:flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     border: 1rem;
 }
+
 .box {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    flex-direction: column;
-    padding: 100px;
+    flex-direction: row;
+    margin: 50px;
+    padding:20px;
     border-style: solid;
+    max-width: 600px;
 }
+
+h1 {
+    padding-bottom: 20px;
+    margin-top: 10px;
+    text-align: center;
+ }
+
+ h5 {
+    text-align: center;
+    padding-top: 20px;
+ }
+ 
+ .cval {
+     text-align: center;
+     padding: 0;
+ }
+
+ p {
+     padding-top:40px;
+
+ }
+
+ .value {
+     padding-left: 70px;
+ }
+ 
+ .calc {
+     margin: 25px 0px 0px 30px;
+ }
+
+ /* div {
+     border-style: dotted;
+     border-color: lightgray;
+ } */
+
+ 
